fix details and menu alignment issue

--- a/ucdpilotweb/src/main/webapp/css/base.css
+++ b/ucdpilotweb/src/main/webapp/css/base.css
@@ -134,8 +134,8 @@ span.answer{
 
 #menu{
     text-align: center;
-    position: absolute;
-    bottom: 0;
+    position: fixed;
+    bottom: 0px;
     right:0px;
     padding: 10px;
     background-color: #000;
